Fix horizontal scroll on collections page

--- a/src/app/collections/collections.module.css
+++ b/src/app/collections/collections.module.css
@@ -17,7 +17,7 @@
     gap: 1rem;
     align-items: center;
     justify-content: center;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     max-width: 1400px;
     margin: 0 auto;
 }
